--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <h3>Joshua Tongol</h3>
                 <p>
                     <strong>Role:</strong> Developer<br />
-                    <strong>Skills:</strong> 
+                    <strong>Skills:</strong> i
                 </p>
                 </article>
                 <article class="team-member">
