--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h2>Screen Recording</h2>
             <p>Watch our demonstration video showcasing the key features of Reciply:</p>
             <video controls width="640">
-                <source src="IMG_5939.mov" type="video/mp4" />
+                <source src="AppRecording.webm" type="video/mp4" />
                 Your browser does not support the video tag.
             </video>
             </section>
