updated skills developed descriptions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Reciply - Recipe Collection App</title>
+        <title>Reciply</title>
         <link rel="stylesheet" href="style.css" />
         <!-- Google Fonts -->
         <link
@@ -254,7 +254,13 @@
                     <p><strong>Role:</strong> Backend Developer/Testing</p>
                     <ul>
                     <li>
-                        <strong>Skills Developed:</strong> (Add concise bullet points for Joshua’s contributions.)
+                        <strong>Implementation of Logic Layer:</strong> Implemented some of the behaviour for the business layer using test-driven development.
+                    </li>
+                    <li>
+                        <strong>Unit Testing and Integration Testing:</strong> Using JUnit, implemented unit tests for some business layer objects, and implemented integration tests for interactions between the business layer and the data layer.
+                    </li>
+                    <li>
+                        <strong>Version Control:</strong> Learned and used Git, and followed the GitFlow strategy to maintain high quality code and well-managed organization of project files between collaborators.
                     </li>
                     <!-- Add more bullets as needed -->
                     </ul>
